--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
     "classnames": "^2.2.6",
+    "firebase": "^8.4.2",
     "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
